--- a/EMO/baseline_custom.ipynb
+++ b/EMO/baseline_custom.ipynb
@@ -675,6 +675,45 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "num_features=features_train.shape[1]\n",
+        "\n",
+        "class BERTClassifier(BertPreTrainedModel):\n",
+        "    def __init__(self, config):\n",
+        "        super().__init__(config)\n",
+        "        self.num_labels = config.num_labels\n",
+        "        self.num_features = num_features\n",
+        "        self.config = config\n",
+        "\n",
+        "        self.bert = BertModel(config)\n",
+        "        self.dropout = torch.nn.Dropout(0.3)\n",
+        "        self.linear = torch.nn.Linear(768+num_features, self.num_labels)\n",
+        "        self.post_init()\n",
+        "\n",
+        "    def forward(self, input_ids, attention_mask=None,  \n",
+        "                token_type_ids=None, labels=None, \n",
+        "                features=None, output_attentions=False):\n",
+        "        outputs = self.bert(\n",
+        "          input_ids,\n",
+        "          attention_mask=attention_mask,\n",
+        "          token_type_ids=token_type_ids,\n",
+        "          output_attentions=True\n",
+        "        )\n",
+        "        if features is not None:\n",
+        "          dropout_output = torch.cat((dropout_output, features), dim=1)\n",
+        "        logits = self.linear(dropout_output)\n",
+        "        loss = None\n",
+        "        if labels is not None:\n",
+        "            loss_fct = BCEWithLogitsLoss()\n",
+        "            loss = loss_fct(logits, labels)\n",
+        "        return SequenceClassifierOutput(loss=loss, logits=logits, hidden_states=outputs.hidden_states,attentions=outputs.attentions)"
+      ]
     }
   ],
   "metadata": {
