--- a/hope_dataset.ipynb
+++ b/hope_dataset.ipynb
@@ -610,7 +610,404 @@
     "for idx, row in hope_data.iterrows():\n",
     "    if row['essay_len'] < 40 or row['essay_len'] > 160:\n",
     "        hope_data = hope_data.drop([idx])\n",
-    "hope_data "
+    "hope_data \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>essay</th>\n",
+       "      <th>essay_len</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12253</th>\n",
+       "      <td>Ashton Levry I get what you're saying but at t...</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1868</th>\n",
+       "      <td>It wasn’t erected as a symbol of slavery... it...</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14872</th>\n",
+       "      <td>I am abhorred by what happened to George Floyd...</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20190</th>\n",
+       "      <td>A kind gentle man has to endure torture becaus...</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10206</th>\n",
+       "      <td>You can't change the world with hate you just ...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18523</th>\n",
+       "      <td>Now for premise I am not American and I don't ...</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2601</th>\n",
+       "      <td>The fact is that racism points fingers in All ...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4407</th>\n",
+       "      <td>This is so inspiring!  MD/ PhD in engineering ...</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1539</th>\n",
+       "      <td>All lives matter ! why is Black live matter ? ...</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14030</th>\n",
+       "      <td>Like this comment to support nBlack lives matt...</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20288</th>\n",
+       "      <td>Jessica Walker I think most people don’t even ...</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11847</th>\n",
+       "      <td>I know  there is some sexism in the workforce ...</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2550</th>\n",
+       "      <td>Bisexual Unicorn here and I absolutely love th...</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13357</th>\n",
+       "      <td>It’s racist to say black lives matter it’s cor...</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3284</th>\n",
+       "      <td>So I like boys like sexually. Like I would mar...</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17474</th>\n",
+       "      <td>stop forcing people to forcefully study engine...</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22492</th>\n",
+       "      <td>There are lgbtq persons who do bad things. Tha...</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13588</th>\n",
+       "      <td>Yo for real why do all of you guys care so muc...</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11449</th>\n",
+       "      <td>when i was young i always took my brothers leg...</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2749</th>\n",
+       "      <td>I have always been an artiest and a writer i n...</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14864</th>\n",
+       "      <td>im glad they got a male perspective to balance...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7789</th>\n",
+       "      <td>I lost most all except one of my friends after...</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7646</th>\n",
+       "      <td>Whatever happened to Coronavirus? Remember how...</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16885</th>\n",
+       "      <td>A lot of our children are addicted. Meth flood...</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15031</th>\n",
+       "      <td>All lives do matter yes right now most of the ...</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12300</th>\n",
+       "      <td>+Lexus Fox Women in western countries don't ch...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2838</th>\n",
+       "      <td>When I was young I was given dolls and kitchen...</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22182</th>\n",
+       "      <td>What i don't understand about most of these co...</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>I never understood racism. I grew up thinking ...</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8961</th>\n",
+       "      <td>growing up extremely low income and as a woman...</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18776</th>\n",
+       "      <td>I love this. I get a little discouraged every ...</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7234</th>\n",
+       "      <td>im sitting here watching this and when he says...</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8868</th>\n",
+       "      <td>ALL LIVES MATTER NOT JUST BLACK LIVES. EVERYON...</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16258</th>\n",
+       "      <td>I find it funny at the amount of attention the...</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15823</th>\n",
+       "      <td>It's not like I feel I can not because I'm a w...</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18123</th>\n",
+       "      <td>Yeah all lives matter dude that includes black...</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5912</th>\n",
+       "      <td>Candra Rakhmasari nYES!!! using religion to ab...</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15094</th>\n",
+       "      <td>You have to check out the trailer for imperium...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913</th>\n",
+       "      <td>Hive-Mind. Emotional Contagion. Mass Hysteria....</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22738</th>\n",
+       "      <td>I could maybe be sympathetic if they were less...</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2026</th>\n",
+       "      <td>+Steven T.Parker Is never wrong to have an ins...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20042</th>\n",
+       "      <td>I'm am fortunate to live where I do. If you co...</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5544</th>\n",
+       "      <td>i am a girl when i told my family about me doi...</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18155</th>\n",
+       "      <td>She said it bothers her that people call her s...</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21157</th>\n",
+       "      <td>In my Engineering and Architecture Department ...</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5735</th>\n",
+       "      <td>even if shes talkin for women i as a male was ...</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20488</th>\n",
+       "      <td>Every parengts wiling to put their child into ...</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6281</th>\n",
+       "      <td>I am a girl/woman and an electrical engineer. ...</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>All lives matter. There I said it. God bless y...</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14410</th>\n",
+       "      <td>Her eyes are so beautiful. Very striking. You ...</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8635</th>\n",
+       "      <td>It’s a fact but it’s not the case at this time...</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8242</th>\n",
+       "      <td>Blue Lives Matter. Black Lives Matter. Hispani...</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15968</th>\n",
+       "      <td>I dont understand why it is up to anyone else ...</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18364</th>\n",
+       "      <td>Being pro-life and pro-sterilization is not hy...</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   essay  essay_len\n",
+       "12253  Ashton Levry I get what you're saying but at t...         73\n",
+       "1868   It wasn’t erected as a symbol of slavery... it...         87\n",
+       "14872  I am abhorred by what happened to George Floyd...         84\n",
+       "20190  A kind gentle man has to endure torture becaus...         65\n",
+       "10206  You can't change the world with hate you just ...         60\n",
+       "18523  Now for premise I am not American and I don't ...         42\n",
+       "2601   The fact is that racism points fingers in All ...         60\n",
+       "4407   This is so inspiring!  MD/ PhD in engineering ...         74\n",
+       "1539   All lives matter ! why is Black live matter ? ...         42\n",
+       "14030  Like this comment to support nBlack lives matt...         63\n",
+       "20288  Jessica Walker I think most people don’t even ...         85\n",
+       "11847  I know  there is some sexism in the workforce ...         91\n",
+       "2550   Bisexual Unicorn here and I absolutely love th...         56\n",
+       "13357  It’s racist to say black lives matter it’s cor...         65\n",
+       "3284   So I like boys like sexually. Like I would mar...         64\n",
+       "17474  stop forcing people to forcefully study engine...         52\n",
+       "22492  There are lgbtq persons who do bad things. Tha...         41\n",
+       "13588  Yo for real why do all of you guys care so muc...         49\n",
+       "11449  when i was young i always took my brothers leg...         53\n",
+       "2749   I have always been an artiest and a writer i n...         58\n",
+       "14864  im glad they got a male perspective to balance...         68\n",
+       "7789   I lost most all except one of my friends after...         90\n",
+       "7646   Whatever happened to Coronavirus? Remember how...         48\n",
+       "16885  A lot of our children are addicted. Meth flood...         62\n",
+       "15031  All lives do matter yes right now most of the ...         70\n",
+       "12300  +Lexus Fox Women in western countries don't ch...         60\n",
+       "2838   When I was young I was given dolls and kitchen...        156\n",
+       "22182  What i don't understand about most of these co...         78\n",
+       "182    I never understood racism. I grew up thinking ...         45\n",
+       "8961   growing up extremely low income and as a woman...         73\n",
+       "18776  I love this. I get a little discouraged every ...         64\n",
+       "7234   im sitting here watching this and when he says...         42\n",
+       "8868   ALL LIVES MATTER NOT JUST BLACK LIVES. EVERYON...         42\n",
+       "16258  I find it funny at the amount of attention the...         54\n",
+       "15823  It's not like I feel I can not because I'm a w...         45\n",
+       "18123  Yeah all lives matter dude that includes black...         49\n",
+       "5912   Candra Rakhmasari nYES!!! using religion to ab...         49\n",
+       "15094  You have to check out the trailer for imperium...         68\n",
+       "10913  Hive-Mind. Emotional Contagion. Mass Hysteria....         48\n",
+       "22738  I could maybe be sympathetic if they were less...         97\n",
+       "2026   +Steven T.Parker Is never wrong to have an ins...         60\n",
+       "20042  I'm am fortunate to live where I do. If you co...         41\n",
+       "5544   i am a girl when i told my family about me doi...         40\n",
+       "18155  She said it bothers her that people call her s...         67\n",
+       "21157  In my Engineering and Architecture Department ...         50\n",
+       "5735   even if shes talkin for women i as a male was ...         46\n",
+       "20488  Every parengts wiling to put their child into ...         50\n",
+       "6281   I am a girl/woman and an electrical engineer. ...         53\n",
+       "1219   All lives matter. There I said it. God bless y...         85\n",
+       "14410  Her eyes are so beautiful. Very striking. You ...         46\n",
+       "8635   It’s a fact but it’s not the case at this time...         72\n",
+       "8242   Blue Lives Matter. Black Lives Matter. Hispani...         58\n",
+       "15968  I dont understand why it is up to anyone else ...         85\n",
+       "18364  Being pro-life and pro-sterilization is not hy...         60"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# selezioniamo 54 esempi\n",
+    "\n",
+    "hope_data = hope_data.sample(54)\n",
+    "hope_data\n",
+    "\n",
+    "# 329 2550"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hope_data = hope_data.drop(['essay_len'], axis=1)\n",
+    "hope_data['emotion'] = 'hope'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = './datasets/english_hope.csv'\n",
+    "hope_data.to_csv(PATH, index=False, sep='\\t')"
    ]
   }
  ],
